--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,8 @@
 /* Utility classes    */
 /*--------------------*/
 
+/* General */
+
 .troubleshoot-r * {
   border: 1px solid red;
 }
@@ -41,7 +43,15 @@
 
 .container{
   padding-inline: 2em;
+  /* max-width: 80rem; */
 }
+
+.flow > *:where(:not(:first-child)){
+  margin-top: var(--flow-gap, 1em);
+}
+
+
+/* Text color */
 
 .text-dark{
   color: hsl(var(--clr-dark))
@@ -55,6 +65,9 @@
   color: hsl(var(--clr-white))
 }
 
+
+/* Background color */
+
 .bg-dark{
   background-color: hsl(var(--clr-dark))
 }
@@ -67,6 +80,9 @@
   background-color: hsl(var(--clr-white))
 }
 
+
+/* Font family */
+
 .ff-serif{
   font-family: var(--ff-serif);
 }
@@ -78,6 +94,9 @@
 .ff-sans-cond{
   font-family: var(--ff-sans-cond);
 }
+
+
+/* Font size */
 
 .fs-900{
   font-size: var(--fs-900);
@@ -107,10 +126,210 @@
   font-size: var(--fs-300);
 }
 
+/* Font style */
+
 .uppercase{
   text-transform: uppercase;
 }
 
-.flow > *:where(:not(:first-child)){
-  margin-top: var(--flow-gap, 1em);
+
+/* Text styles */
+
+.heading-1{
+  text-transform: uppercase;
+  font-family: var(--ff-serif);
+  font-size: var(--fs-900);
+}
+
+.heading-2{
+  text-transform: uppercase;
+  font-family: var(--ff-serif);
+  font-size: var(--fs-800);
+}
+
+.heading-3{
+  text-transform: uppercase;
+  font-family: var(--ff-serif);
+  font-size: var(--fs-700);
+}
+
+.heading-4{
+  text-transform: uppercase;
+  font-family: var(--ff-serif);
+  font-size: var(--fs-600);
+}
+
+.heading-5{
+  text-transform: uppercase;
+  font-family: var(--ff-sans-cond);
+  font-size: var(--fs-500);
+  letter-spacing: 0.3rem;
+  color:hsl(var(--clr-light))
+}
+
+.sub-heading-1{
+  text-transform: uppercase;
+  font-family: var(--ff-serif);
+  font-size: var(--fs-500);
+}
+
+.sub-heading-2{
+  text-transform: uppercase;
+  font-family: var(--ff-sans-cond);
+  font-size: var(--fs-300);
+  letter-spacing: 0.15rem;
+}
+
+.nav-text{
+  text-transform: uppercase;
+  font-family: var(--ff-sans-cond);
+  font-size: var(--fs-400);
+  letter-spacing: 0.17rem;
+}
+
+.body-text{
+  font-family: var(--ff-sans);
+  font-size: var(--fs-400);
+}
+
+
+
+/*--------------------*/
+/* Component classes  */
+/*--------------------*/
+
+/* Numbered titles */
+.numbered-title {
+  font-family: var(--ff-sans-cond);
+  font-size: var(--fs-500);
+  text-transform: uppercase;
+  letter-spacing: 0.3rem;
+}
+
+.numbered-title > span{
+  color: hsl(var(--clr-white) / 0.25);
+  padding-right: 1rem;
+}
+
+/* Tab navigation */
+nav{
+  background-color: hsl(var(--clr-white) / 0.1);
+  display: flex;
+  justify-content: center;
+}
+
+.tab-navigation{
+  display: flex;
+  gap: var(--gap, 2em);
+}
+
+nav .tab-navigation{
+  --gap: 4em
+}
+
+.tab-navigation > * {
+  padding-block: 1em;
+  border-bottom: 2px solid hsl(var(--clr-white) / 0);
+}
+
+nav .tab-navigation > *{
+  padding-block: 2em;
+}
+
+.tab-navigation .numbered-text > span{
+  font-weight: bold;
+  padding-right: 0.5rem;
+}
+
+.tab-navigation > :hover,
+.tab-navigation > :focus{
+  border-color: hsl(var(--clr-white) / 0.5);
+}
+
+.tab-navigation > .active, 
+.tab-navigation > [aria-selected="true"]{
+  border-color: hsl(var(--clr-white) / 1);
+}
+
+.tab-navigation[role="tablist"] > * {
+  padding-block: 0.5em;
+}
+
+.tab-navigation > button{
+  background-color: transparent;
+}
+
+/* Large button */
+.large-btn{
+  position: relative;
+  z-index: 1;
+  aspect-ratio: 1;
+  padding-inline: 1em;
+  border-radius: 50%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.large-btn::after{
+  content: '';
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  background: hsl( var(--clr-white) / .1);
+  border-radius: 50%;
+  opacity: 0;
+  transition: transform 0.75s ease-in-out, opacity 0.5s linear;
+}
+
+.large-btn:hover::after,
+.large-btn:focus::after{
+  transform: scale(1.5);
+  opacity: 1;
+}
+
+/* Slider bars */
+.dot-slider > *{
+  padding: 0.5rem;
+  margin-inline: 0.5rem;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background-color: hsl( var(--clr-white) / 0.15);
+}
+
+.dot-slider > *:hover,
+.dot-slider > *:focus{
+  background-color: hsl( var(--clr-white) / 0.5)
+}
+
+.dot-slider > [aria-selected="true"]{
+  background-color: hsl( var(--clr-white) / 1)
+}
+
+.numbered-slider{
+  display: flex;
+  flex-direction: column;
+  width: 2em
+}
+
+.numbered-slider > * {
+  padding: 0.5rem;
+  margin-block: 0.5rem;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background-color: transparent;
+  color: hsl( var(--clr-white));
+  border: 1px solid hsl( var(--clr-white) / .25);
+}
+
+.numbered-slider > *:hover,
+.numbered-slider > *:focus{
+  border-color: hsl( var(--clr-white));
+}
+
+.numbered-slider > [aria-selected="true"]{
+  background-color: hsl( var(--clr-white));
+  color: hsl( var(--clr-dark));
 }
