--- a/src/App.css
+++ b/src/App.css
@@ -306,7 +306,7 @@
 @media (max-width: 35rem) {
   #main-navigation{
     position: fixed;
-    top: 0;
+    top: 1px;
     right: 0;
     height: 100vh;
     transform: translate(0%);
@@ -512,7 +512,7 @@
 
 @media (max-width: 48rem) {
   .main-header{
-    padding-top: 0;
+    padding-top: 1px;
     justify-content: space-between;
   }
 }
