--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,7 @@
 @media (max-width: 35rem) {
   :root{
     --fs-900: 5rem;
+    --fs-800: 3.5rem;
     --fs-700: 1.5rem;
     --fs-600: 1.25rem;
     --fs-500: 1rem;
@@ -217,6 +218,7 @@
 }
 
 .sub-heading-1{
+  --fs-500: 1.75rem;
   text-transform: uppercase;
   font-family: var(--ff-serif);
   font-size: var(--fs-500);
@@ -311,6 +313,8 @@
     height: 100vh;
     transform: translate(0%);
     transition: transform 0.5s ease-in-out;
+
+    --fs-300: 1rem;
   }
 
   #main-navigation[data-expanded="false"]{
@@ -322,7 +326,8 @@
     height: 100%;
     --gap: 0.7em;
     padding-top: 8em;
-    width: 20em;
+    padding-inline: 2em 0.1em;
+    width: clamp(10em, calc(60vw + 5em) , 20em);
     background-color: hsl(var(--clr-dark) / 0.85);
   }
 }
@@ -601,19 +606,38 @@
   background-image: url("./assets/destination/background-destination-desktop.jpg");
 }
 
+.destination main {
+  padding-inline: clamp(3em, 7.5vw, 10em);
+  padding-block: 5vh;
+  justify-content: center;
+  flex: 1;
+}
+
 .destination .main{
   display: flex;
+  padding-top: clamp(2em, 3vh, 5em);
+  justify-content: center;
+  gap: clamp(2em, 10vw, 20em);
 }
 
-.destination .main > * {
-  flex: 1;
-  padding: 5em;
+.destination .main > *:first-child img {
+  width: clamp(17em, 25vw, 40em);
 }
 
-.destination .main [role="tabpanel"] > div {
+.destination .main > *:last-child [role="tabpanel"]{
+  display: flex;
+  flex-direction: column;
+}  
+
+.destination .main .description {
+  max-width: 45ch;
+}
+
+.destination .main > *:last-child  aside {
+  --flow-gap: clamp(1em, 5vh, 5em);
   display: flex;
   gap: 5em;
-  padding-block: 2em;
+  padding-block: clamp(1em, 3vh, 3em);
   border-top: 1px solid hsl( var(--clr-light) /0.24)
 }
 
@@ -625,15 +649,27 @@
   .destination .main{
     flex-direction: column;
     text-align: center;
+    gap: 2em;
   }
 
   .destination .main .tab-navigation{
     justify-content: center;
   }
 
-  .destination .main [role="tabpanel"] > div {
-    justify-content: center;
+  .destination .main > *:last-child [role="tabpanel"]{
+    align-items: center;
   }  
+
+  .destination .main .description {
+    max-width: 65ch;
+  }  
+
+  .destination .main > *:last-child  aside {
+    --flow-gap: 3em;
+    justify-content: center;
+    width: 100%;
+  }  
+
 }
 
 @media (max-width: 35rem) {
@@ -641,9 +677,18 @@
     background-image: url("./assets/destination/background-destination-mobile.jpg");
   }
 
-  .destination .main [role="tabpanel"] > div {
+  .destination main{
+    text-align: center;
+    padding-inline: clamp(1em, 10vw, 3em);
+  }
+
+  .destination .main > *:first-child img {
+    width: clamp(10em, 45vw, 15em);
+  }
+  
+  .destination .main > *:last-child  aside {
     flex-direction: column;
-    gap: 2em;
+    gap: 1.5em;
   }  
 }
 
@@ -662,7 +707,6 @@
   display: flex;
   flex-direction: column;
 }
-
 
 .crew .main h2 {
   color:hsl( var(--clr-white) /0.5)
