--- a/src/App.css
+++ b/src/App.css
@@ -637,8 +637,10 @@
   gap: clamp(2em, 10vw, 20em);
 }
 
-.destination .main > *:first-child img {
+.destination .main > *:first-child img,
+.planetLoaderBg {
   width: clamp(17em, 25vw, 40em);
+  height: clamp(17em, 25vw, 40em);
 }
 
 .destination .main > *:last-child [role="tabpanel"]{
@@ -700,8 +702,10 @@
     padding-top: 0;
   }
 
-  .destination .main > *:first-child img {
+  .destination .main > *:first-child img,
+  .planetLoaderBg {
     width: clamp(10em, 45vw, 15em);
+    height: clamp(10em, 45vw, 15em);
   }
   
   .destination .main > *:last-child  aside {
@@ -751,7 +755,8 @@
   align-items: flex-end;
 }
 
-.crew .main > *:last-child img {
+.crew .main > *:last-child img,
+.crewLoaderBg {
   height: clamp(20em, 62.5vh, 30em);
   width: auto;
 }
@@ -785,7 +790,8 @@
     max-width: 65ch;
   }  
 
-  .crew .main > *:last-child img {
+  .crew .main > *:last-child img,
+  .crewLoaderBg {
     height: clamp(20em, 45vh, 30em);
   }  
 
@@ -830,7 +836,8 @@
     border-bottom: 1px solid hsl( var(--clr-white) / 0.24);
   }  
 
-  .crew .main > *:last-child img {
+  .crew .main > *:last-child img,
+  .crewLoaderBg {
     height: clamp(15em, 35vh, 20em);
   }  
 
@@ -867,7 +874,8 @@
   max-width: 45ch;
 }
 
-.technology .main > *:last-child  img{
+.technology .main > *:last-child  img, 
+.technologyLoaderBg{
   width: auto;
   height: clamp(40vh, 40vw, 60vh);
 }
@@ -900,7 +908,8 @@
     max-width: 50ch;
   }  
 
-  .technology .main > *:last-child  img{
+  .technology .main > *:last-child  img,
+  .technologyLoaderBg{
     width: 100%;
     height: auto;
   }  
@@ -921,4 +930,54 @@
   .technology .main > *:first-child {
     padding-inline: 2em;
   }  
+}
+
+
+
+/*--------------------*/
+/* Animations         */
+/*--------------------*/
+
+@keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Loader */
+.lds-facebook {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+  animation: fadein 500ms linear;
+}
+.lds-facebook div {
+  display: inline-block;
+  position: absolute;
+  left: 8px;
+  width: 16px;
+  background: #fff;
+  animation: lds-facebook 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
+}
+.lds-facebook div:nth-child(1) {
+  left: 8px;
+  animation-delay: -0.24s;
+}
+.lds-facebook div:nth-child(2) {
+  left: 32px;
+  animation-delay: -0.12s;
+}
+.lds-facebook div:nth-child(3) {
+  left: 56px;
+  animation-delay: 0;
+}
+@keyframes lds-facebook {
+  0% {
+    top: 8px;
+    height: 64px;
+  }
+  50%, 100% {
+    top: 24px;
+    height: 32px;
+  }
 }
